SO servo/stepper fix

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ smarthome/on.jpg
 smarthome/smart.css
 smarthome/on.jpg
 pages/java.js
+backendSource/node_modules/ws/lib/.DS_Store
+backendSource/node_modules/ws/lib/.DS_Store
+backendSource/node_modules/websocket-stream/node_modules/ws/lib/.DS_Store
+backendSource/.DS_Store
+pages/.DS_Store
