küldés a webnek ha automatizáció bekapcsol

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ backendSource/node_modules/ws/lib/.DS_Store
 backendSource/node_modules/websocket-stream/node_modules/ws/lib/.DS_Store
 backendSource/.DS_Store
 pages/.DS_Store
+.DS_Store
